// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render of Accountinfo component 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffff",
        "borderColor": "#F05454",
        "borderRadius": 10,
        "borderWidth": 2,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 15,
        "padding": 15,
      }
    }
    testID="test_champView1"
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "paddingLeft": 10,
        }
      }
    >
      Nom
    </Text>
    <Text
      style={
        Object {
          "marginHorizontal": 123,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffff",
        "borderColor": "#F05454",
        "borderRadius": 10,
        "borderWidth": 2,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 15,
        "padding": 15,
      }
    }
    testID="test_champView2"
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "paddingLeft": 10,
        }
      }
    >
      Prenom
    </Text>
    <Text
      style={
        Object {
          "marginHorizontal": 123,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffff",
        "borderColor": "#F05454",
        "borderRadius": 10,
        "borderWidth": 2,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 15,
        "padding": 15,
      }
    }
    testID="test_champView3"
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "paddingLeft": 10,
        }
      }
    >
      Email
    </Text>
    <Text
      style={
        Object {
          "marginHorizontal": 123,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffff",
        "borderColor": "#F05454",
        "borderRadius": 10,
        "borderWidth": 2,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "margin": 15,
        "padding": 15,
      }
    }
    testID="test_champView4"
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "paddingLeft": 10,
        }
      }
    >
      Mot de passe
    </Text>
    <Text>
      
    </Text>
    <Text />
  </View>
</View>
`;

exports[`renders default elements and styles: test champTextEmail style 1`] = `
Object {
  "fontSize": 15,
  "fontWeight": "bold",
  "paddingLeft": 10,
}
`;

exports[`renders default elements and styles: test champTextMdp style 1`] = `
Object {
  "fontSize": 15,
  "fontWeight": "bold",
  "paddingLeft": 10,
}
`;

exports[`renders default elements and styles: test champTextNom style 1`] = `
Object {
  "fontSize": 15,
  "fontWeight": "bold",
  "paddingLeft": 10,
}
`;

exports[`renders default elements and styles: test champTextPrenom style 1`] = `
Object {
  "fontSize": 15,
  "fontWeight": "bold",
  "paddingLeft": 10,
}
`;

exports[`renders default elements and styles: test champView1 style 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#ffff",
  "borderColor": "#F05454",
  "borderRadius": 10,
  "borderWidth": 2,
  "flexDirection": "row",
  "justifyContent": "space-between",
  "margin": 15,
  "padding": 15,
}
`;

exports[`renders default elements and styles: test champView2 style 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#ffff",
  "borderColor": "#F05454",
  "borderRadius": 10,
  "borderWidth": 2,
  "flexDirection": "row",
  "justifyContent": "space-between",
  "margin": 15,
  "padding": 15,
}
`;

exports[`renders default elements and styles: test champView3 style 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#ffff",
  "borderColor": "#F05454",
  "borderRadius": 10,
  "borderWidth": 2,
  "flexDirection": "row",
  "justifyContent": "space-between",
  "margin": 15,
  "padding": 15,
}
`;

exports[`renders default elements and styles: test champView4 style 1`] = `
Object {
  "alignItems": "center",
  "backgroundColor": "#ffff",
  "borderColor": "#F05454",
  "borderRadius": 10,
  "borderWidth": 2,
  "flexDirection": "row",
  "justifyContent": "space-between",
  "margin": 15,
  "padding": 15,
}
`;
